Update map api controller